# Voxelized3D-Rust

./: .gitignore  Cargo.toml  Cask  README.md  TODO  build.rs  code.txt
.github/workflows/: macos.yml  rust.yml  ubuntu.yml  windows.yml
assets/shaders/: color.frag  color.vert  lighting.frag  texture.frag  texture_color.frag
assets/shaders/gl/: color.vert  lighting.vert  texture.frag  texture.vert  texture_color.frag  texture_color.vert
assets/shaders/vulkan/: raytrace.cs
glad/: CMakeLists.txt
glad-gl/: Cargo.toml
glad-gl/src/: gl.rs  lib.rs
glad-vulkan/: Cargo.toml
glad-vulkan/src/: lib.rs  vk.rs
glad/include/glad/: glad.h
glad/include/glm/: CMakeLists.txt
glad/include/glm/gtc/: quaternion.hpp  random.hpp  swizzle.hpp  type_precision.hpp  type_ptr.hpp
glad/include/glm/gtx/: color_cast.hpp  gradient_paint.hpp  int_10_10_10_2.hpp  intersect.hpp  matrix_query.hpp  norm.hpp  normalize_dot.hpp  perpendicular.hpp  rotate_vector.hpp  spline.hpp  string_cast.hpp  transform2.hpp  vector_angle.hpp
src/: adaptive_dc.rs  adaptive_manifold_dc.rs  array.rs  cms.rs  cubic.rs  dc.rs  dcm.rs  graphics.rs  graphics_util.rs  main.rs  math.rs  math_tests.rs  matrix.rs  matrix_const.rs  matrix_ops.rs  qef_bindings.rs  renderer.rs  uniform_manifold_dc.rs  util.rs  vector.rs  vector_old.rs  voxel_renderer.rs  vulkan.rs  vulkan_raytracer.rs
src/C/: find_and_replace.cpp  glad.c  qef_solver.cpp  util.c
src/H/: util.h
src/deprecated/: vector.rs
src/extraction/: adaptive_manifold_dc.rs  cubic.rs  dcm.rs  mod.rs  uniform_manifold_dc.rs
src/test/: mod.rs
voxelized-3d-cuda/: CMakeLists.txt  FastNoise.cpp  FastNoise.h  cuda_noise.cuh  dc_attempts.cpp  main.cpp  mesh.cpp  mesh.h  types.h
