[package]
name = "glad-vulkan"
version = "2.0.0-beta"
authors = ["David Herberth <github@dav1d.de>"]

[features]
VK_USE_PLATFORM_XCB_KHR = []
xcb = ["VK_USE_PLATFORM_XCB_KHR"]
VK_USE_PLATFORM_MACOS_MVK = []
macos = ["VK_USE_PLATFORM_MACOS_MVK"]
VK_USE_PLATFORM_GGP = []
ggp = ["VK_USE_PLATFORM_GGP"]
VK_USE_PLATFORM_XLIB_XRANDR_EXT = []
xlib_xrandr = ["VK_USE_PLATFORM_XLIB_XRANDR_EXT"]
VK_USE_PLATFORM_FUCHSIA = []
fuchsia = ["VK_USE_PLATFORM_FUCHSIA"]
VK_USE_PLATFORM_XLIB_KHR = []
xlib = ["VK_USE_PLATFORM_XLIB_KHR"]
VK_USE_PLATFORM_IOS_MVK = []
ios = ["VK_USE_PLATFORM_IOS_MVK"]
VK_USE_PLATFORM_METAL_EXT = []
metal = ["VK_USE_PLATFORM_METAL_EXT"]
VK_USE_PLATFORM_WIN32_KHR = []
win32 = ["VK_USE_PLATFORM_WIN32_KHR"]
VK_USE_PLATFORM_WAYLAND_KHR = []
wayland = ["VK_USE_PLATFORM_WAYLAND_KHR"]
VK_USE_PLATFORM_VI_NN = []
vi = ["VK_USE_PLATFORM_VI_NN"]
VK_USE_PLATFORM_ANDROID_KHR = []
android = ["VK_USE_PLATFORM_ANDROID_KHR"]
VK_ENABLE_BETA_EXTENSIONS = []
provisional = ["VK_ENABLE_BETA_EXTENSIONS"]
